--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,24 @@ on:
       - master
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Run tests in Docker
+        run: docker buildx build --platform linux/amd64 --target test --progress plain .
+
   build_and_push:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -34,5 +51,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          target: runtime
+          platforms: linux/amd64
           push: true
-          tags: ghcr.io/craigst/paperworkgen:latest
+          tags: |
+            ghcr.io/craigst/paperworkgen:latest
+            ghcr.io/craigst/paperworkgen:${{ github.sha }}
